refactor: Service 로직 제거 및 ParsedInput 객체에 책임 부여