@@ -1,5 +1,8 @@
 package calculator.domain;
 
+import java.math.BigInteger;
+import org.junit.platform.commons.util.StringUtils;
+
 public class ParsedInput {
 
     private final String expression;
@@ -25,14 +28,27 @@ public class ParsedInput {
         return createDefault(userInput);
     }
 
-    public String[] split() {
+    public BigInteger calculate() {
 
-        return delimiters.split(expression);
+        // 공백 입력 또는 커스텀 구분자를 제외한 표현식이 공백이면 조기 반환
+        if (isExpressionBlank()) {
+
+            return BigInteger.ZERO;
+        }
+
+        // 파싱된 표현식과 구분자로 분리
+        String[] userInputSplit = delimiters.split(expression);
+
+        // 분리된 표현식을 양수로 파싱
+        Numbers parsedUserInput = Numbers.of(userInputSplit);
+
+        // 파싱된 양수들의 합산 결과 반환
+        return parsedUserInput.addAll();
     }
 
-    public boolean hasExpression() {
+    private boolean isExpressionBlank() {
 
-        return !expression.isBlank();
+        return StringUtils.isBlank(expression);
     }
 
     private static ParsedInput createDefault(String userInput) {
